--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ erl_crash.dump
 /config/*.secret.exs
 .elixir_ls/
 
+# Benchmark results (generated in _build/benchmarks/)
+_build/benchmarks/
+
 ### Elixir Patch ###
 
 ### Intellij+all ###
